--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>TelstraAssignment</groupId>
-  <artifactId>TelstraAssignment</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>TelstraAssignment</name>
-  <description>TelstraAssignment</description>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>TelstraAssignment</groupId>
+	<artifactId>TelstraAssignment</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>TelstraAssignment</name>
+	<description>TelstraAssignment</description>
 
 	<dependencies>
 		<!-- These are the cucumber dependencies -->
@@ -12,7 +13,7 @@
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-java</artifactId>
 			<version>1.2.5</version>
-			
+
 		</dependency>
 
 		<!-- These are the cucumber-junit dependencies -->
@@ -20,7 +21,7 @@
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-junit</artifactId>
 			<version>1.2.5</version>
-			
+
 		</dependency>
 
 		<!-- These are the junit dependencies -->
@@ -30,7 +31,7 @@
 			<version>4.12</version>
 		</dependency>
 
-		<!-- These are the selenium-webdriver dependencies -->	
+		<!-- These are the selenium-webdriver dependencies -->
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
@@ -51,18 +52,36 @@
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-remote-driver</artifactId>
 			<version>3.9.1</version>
-			
+
 		</dependency>
 
 		<!-- These are the selenium-cucumber methods dependencies -->
-	  
+
 
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>23.2-jre</version>
-			
+
 		</dependency>
-			</dependencies>
+	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12.4</version>
+				<configuration>
+					<systemProperties>
+						<property>
+							<name>browserName</name>
+							<value>${browserName}</value>
+						</property>
+					</systemProperties>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
